--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     app:fontFamily="@font/nunito"
                     android:text="@string/setting"
-                    android:textColor="#fff"
+                    android:textColor="@color/pureWhite"
                     android:paddingTop="@dimen/margin_8"
                     android:paddingBottom="@dimen/margin_8"
                     android:gravity="center"
@@ -44,7 +44,7 @@
                         android:id="@+id/tv_temp_setting"
                         android:layout_width="match_parent"
                         app:fontFamily="@font/nunito"
-                        android:textColor="#fff"
+                        android:textColor="@color/pureWhite"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_view_18sp"
                         android:text="@string/temperature_setting_title"/>
@@ -60,7 +60,7 @@
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             app:fontFamily="@font/nunito"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:background="@color/bg_screen3"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/text_view_14sp"
@@ -72,7 +72,7 @@
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             app:fontFamily="@font/nunito"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:background="@color/bg_screen2"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -84,7 +84,7 @@
                             android:layout_width="0dp"
                             android:layout_weight="2"
                             app:fontFamily="@font/nunito"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:background="@color/bg_screen2"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -102,7 +102,7 @@
                         android:id="@+id/tv_distance_setting"
                         android:layout_width="match_parent"
                         app:fontFamily="@font/nunito"
-                        android:textColor="#fff"
+                        android:textColor="@color/pureWhite"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_view_18sp"
                         android:text="@string/distance_setting_title"/>
@@ -117,7 +117,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             app:fontFamily="@font/nunito"
                             android:background="@color/bg_screen3"
                             android:layout_height="wrap_content"
@@ -129,7 +129,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             app:fontFamily="@font/nunito"
                             android:background="@color/bg_screen2"
                             android:layout_height="wrap_content"
@@ -141,7 +141,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             app:fontFamily="@font/nunito"
                             android:background="@color/bg_screen2"
                             android:layout_height="wrap_content"
@@ -161,7 +161,7 @@
                         android:layout_width="match_parent"
                         app:fontFamily="@font/nunito"
                         android:layout_height="wrap_content"
-                        android:textColor="#fff"
+                        android:textColor="@color/pureWhite"
                         android:textSize="@dimen/text_view_18sp"
                         android:text="@string/speed_setting_title"/>
                     <LinearLayout
@@ -176,7 +176,7 @@
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             app:fontFamily="@font/nunito"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:background="@color/bg_screen3"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/text_view_14sp"
@@ -187,7 +187,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:background="@color/bg_screen2"
                             app:fontFamily="@font/nunito"
                             android:layout_height="wrap_content"
@@ -200,7 +200,7 @@
                             android:layout_width="0dp"
                             android:background="@color/bg_screen2"
                             android:layout_weight="2"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             app:fontFamily="@font/nunito"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -216,7 +216,7 @@
                     android:orientation="vertical">
                     <TextView
                         android:id="@+id/tv_pressure_setting"
-                        android:textColor="#fff"
+                        android:textColor="@color/pureWhite"
                         android:layout_width="match_parent"
                         app:fontFamily="@font/nunito"
                         android:layout_height="wrap_content"
@@ -235,7 +235,7 @@
                             android:layout_weight="1"
                             app:fontFamily="@font/nunito"
                             android:background="@color/bg_screen3"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/text_view_14sp"
                             android:textAllCaps="false"
@@ -245,7 +245,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:background="@color/bg_screen2"
                             app:fontFamily="@font/nunito"
                             android:layout_height="wrap_content"
@@ -257,7 +257,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:layout_width="0dp"
                             android:layout_weight="2"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:background="@color/bg_screen2"
                             app:fontFamily="@font/nunito"
                             android:layout_height="wrap_content"
@@ -282,7 +282,7 @@
                     android:layout_marginStart="@dimen/margin_4"
                     android:layout_marginTop="@dimen/margin_24"
                     android:text="25°C"
-                    android:textColor="#fff"
+                    android:textColor="@color/pureWhite"
                     android:textSize="@dimen/text_view_54sp"
                     app:fontFamily="@font/nunito"
                     app:layout_constraintStart_toStartOf="parent"
@@ -295,7 +295,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_4"
                     android:text="Humud and partly cloudy"
-                    android:textColor="#fff"
+                    android:textColor="@color/pureWhite"
                     android:textSize="@dimen/text_view_18sp"
                     app:fontFamily="@font/nunito"
                     app:layout_constraintStart_toStartOf="parent"
@@ -319,7 +319,7 @@
                     android:layout_height="wrap_content"
                     android:lineSpacingMultiplier="0.8"
                     android:text="A big quote about weather"
-                    android:textColor="#fff"
+                    android:textColor="@color/pureWhite"
                     android:textSize="@dimen/text_view_54sp"
                     app:fontFamily="@font/nunito"
                     app:layout_constraintBottom_toTopOf="@+id/small_text"
@@ -331,7 +331,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="And a comment on the quote"
-                    android:textColor="#fff"
+                    android:textColor="@color/pureWhite"
                     android:textSize="@dimen/text_view_18sp"
                     app:fontFamily="@font/nunito"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -350,7 +350,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="#fff"
+                    android:textColor="@color/pureWhite"
                     android:paddingTop="@dimen/margin_8"
                     android:paddingBottom="@dimen/margin_8"
                     android:text="@string/details_heading"
@@ -385,7 +385,7 @@
                             android:id="@+id/ic_location"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_location_w"
+                            android:src="@drawable/ic_round_location_w"
                             android:layout_gravity="center_vertical"
                             tools:ignore="ContentDescription"/>
 
@@ -395,7 +395,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="Hà Nội"
                             android:layout_marginStart="@dimen/margin_4"
                             android:textSize="@dimen/text_view_18sp"
@@ -422,7 +422,7 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
-                        android:textColor="#fff"
+                        android:textColor="@color/pureWhite"
                         android:text="27°C"
                         android:layout_marginRight="8dp"
                         android:textSize="@dimen/text_view_36sp"
@@ -437,7 +437,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:gravity="center"
-                        android:textColor="#fff"
+                        android:textColor="@color/pureWhite"
                         android:text="@string/real_feel_title_explicit"
                         android:textSize="@dimen/text_view_18sp"
                         app:fontFamily="@font/nunito"
@@ -473,7 +473,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="8 (High af)"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:textSize="@dimen/text_view_20sp"
                             app:fontFamily="@font/nunito" />
 
@@ -483,7 +483,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_4"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="@string/uv_index_title"
                             android:textSize="@dimen/text_view_18sp"
                             app:fontFamily="@font/nunito" />
@@ -504,7 +504,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="71%"
                             android:textSize="@dimen/text_view_20sp"
                             app:fontFamily="@font/nunito" />
@@ -515,7 +515,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_4"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="@string/humidity_title"
                             android:textSize="@dimen/text_view_18sp"
                             app:fontFamily="@font/nunito" />
@@ -547,7 +547,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="6 km"
                             android:textSize="@dimen/text_view_20sp"
                             app:fontFamily="@font/nunito" />
@@ -558,7 +558,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_4"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="@string/visibility_title"
                             android:textSize="@dimen/text_view_18sp"
                             app:fontFamily="@font/nunito" />
@@ -579,7 +579,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="14 psi"
                             android:textSize="@dimen/text_view_20sp"
                             app:fontFamily="@font/nunito" />
@@ -590,7 +590,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_4"
                             android:gravity="center"
-                            android:textColor="#fff"
+                            android:textColor="@color/pureWhite"
                             android:text="@string/pressure_title"
                             android:textSize="@dimen/text_view_18sp"
                             app:fontFamily="@font/nunito" />
@@ -612,7 +612,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/air_quality_index_title"
                         android:textSize="@dimen/text_view_24sp"
-                        android:textColor="#fff"
+                        android:textColor="@color/pureWhite"
                         app:fontFamily="@font/nunito"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
