--- a/app/src/main/res/layout/welcome_slide3.xml
+++ b/app/src/main/res/layout/welcome_slide3.xml
@@ -27,7 +27,7 @@
                 android:layout_marginStart="@dimen/margin_4"
                 android:layout_marginTop="@dimen/margin_24"
                 android:text="25°C"
-                android:textColor="#fff"
+                android:textColor="@color/pureWhite"
                 android:textSize="@dimen/text_view_54sp"
                 app:fontFamily="@font/nunito"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_4"
                 android:text="Humud and partly cloudy"
-                android:textColor="#fff"
+                android:textColor="@color/pureWhite"
                 android:textSize="@dimen/text_view_18sp"
                 app:fontFamily="@font/nunito"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:lineSpacingMultiplier="0.8"
                 android:text="A big quote about weather"
-                android:textColor="#fff"
+                android:textColor="@color/pureWhite"
                 android:textSize="@dimen/text_view_54sp"
                 app:fontFamily="@font/nunito"
                 app:layout_constraintBottom_toTopOf="@+id/small_text"
@@ -76,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="And a comment on the quote"
-                android:textColor="#fff"
+                android:textColor="@color/pureWhite"
                 android:textSize="@dimen/text_view_18sp"
                 app:fontFamily="@font/nunito"
                 app:layout_constraintBottom_toBottomOf="parent"
