--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -92,6 +92,9 @@
   <dimen name="icon_24dp">
     36.0dp
   </dimen>
+  <dimen name="icon_30dp">
+    45.0dp
+  </dimen>
   <dimen name="icon_36dp">
     54.0dp
   </dimen>
