--- a/app/src/main/res/drawable/circle_indicator.xml
+++ b/app/src/main/res/drawable/circle_indicator.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#fff"/>
+        android:color="@color/pureWhite"/>
     <stroke android:width="@dimen/indicator_stroke_width"
-        android:color="#000"/>
+        android:color="@color/absoluteBlack"/>
     <size
         android:width="@dimen/indicator_size"
         android:height="@dimen/indicator_size"/>
