--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="2"
-    android:background="#ffffff"
+    android:background="@color/pureWhite"
     android:baselineAligned="false">
     <LinearLayout
         android:layout_width="0dp"
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_location_b"
+            android:src="@drawable/ic_round_location_b"
             tools:ignore="ContentDescription" />
         <TextView
             android:id="@+id/location_name"
@@ -34,7 +34,7 @@
             android:paddingBottom="@dimen/margin_16"
             android:fontFamily="@font/nunito"
             android:textSize="@dimen/text_view_24sp"
-            android:textColor="#000"
+            android:textColor="@color/absoluteBlack"
             tools:ignore="RtlSymmetry" />
     </LinearLayout>
 
@@ -65,7 +65,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="@font/nunito"
                 android:textSize="@dimen/text_view_18sp"
-                android:textColor="#000"/>
+                android:textColor="@color/absoluteBlack"/>
         </LinearLayout>
 </RelativeLayout>
 
