--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -92,6 +92,9 @@
   <dimen name="icon_24dp">
     32.0dp
   </dimen>
+  <dimen name="icon_30dp">
+    40.0dp
+  </dimen>
   <dimen name="icon_36dp">
     48.0dp
   </dimen>
