--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ffffff</color>
-    <color name="colorPrimaryDark">#ffffff</color>
-    <color name="colorAccent">#ffffff</color>
-    <color name="absoluteBlack">#000000</color>
-    <color name="pureWhite">#ffffff</color>
-    <color name="default_button_bg">#F3DFCB</color>
-    <color name="default_active_button_bg">#7FD1AE</color>
+    <color name="colorPrimary">#ffffffff</color>
+    <color name="colorPrimaryDark">#ffffffff</color>
+    <color name="colorAccent">#ffffffff</color>
+    <color name="absoluteBlack">#ff000000</color>
+    <color name="halfSnappedBlack">#80000000</color>
+    <color name="pureWhite">#ffffffff</color>
+    <color name="setting_bg">#fffffafa</color>
+    <color name="default_button_bg">#ffe0e0</color>
+    <color name="default_active_button_bg">#ffc0d0</color>
 
     <!-- Screens background color-->
     <color name="bg_screen1">#f64c73</color>
