--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <dimen name="forecast_item_height">220dp</dimen>
     <dimen name="icon_90dp">90dp</dimen>
     <dimen name="icon_24dp">24dp</dimen>
+    <dimen name="icon_30dp">30dp</dimen>
     <dimen name="icon_36dp">36dp</dimen>
     <dimen name="icon_48dp">48dp</dimen>
     <dimen name="big_text">72sp</dimen>
