--- a/app/src/main/res/drawable/wind_w.xml
+++ b/app/src/main/res/drawable/wind_w.xml
@@ -1,6 +1,21 @@
-<vector android:height="24dp" android:viewportHeight="100"
-    android:viewportWidth="100" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFFFF" android:pathData="M27.271,45.757h21.77c0.136,0.011 0.266,0.041 0.404,0.041c2.757,0 4.992,-2.235 4.992,-4.993s-2.235,-4.993 -4.992,-4.993c-2.758,0 -4.993,2.235 -4.993,4.993c0,0.958 0.283,1.843 0.751,2.603H27.271c-0.648,0 -1.174,0.526 -1.174,1.175S26.623,45.757 27.271,45.757z"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M56.004,57.818c-0.034,-0.002 -0.063,-0.02 -0.098,-0.02h-27.9c-0.648,0 -1.175,0.526 -1.175,1.175s0.526,1.175 1.175,1.175h23.582c-0.482,0.768 -0.772,1.669 -0.772,2.643c0,2.757 2.235,4.993 4.993,4.993c2.757,0 4.992,-2.235 4.992,-4.993C60.801,60.101 58.668,57.923 56.004,57.818z"/>
-    <path android:fillColor="#FFFFFFFF" android:pathData="M71.912,48.4c0,-2.757 -2.235,-4.993 -4.992,-4.993c-2.758,0 -4.993,2.235 -4.993,4.993c0,0.974 0.29,1.875 0.772,2.643H27.37c-0.649,0 -1.175,0.526 -1.175,1.175s0.525,1.175 1.175,1.175h39.647c0.035,0 0.063,-0.017 0.098,-0.02C69.779,53.268 71.912,51.09 71.912,48.4z"/>
+<vector android:height="46dp" android:viewportHeight="45.6"
+    android:viewportWidth="57.41" android:width="57dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,13.11h24.75v3h-24.75z"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,20.26h45.19v3h-45.19z"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,27.41h41.36v3h-41.36z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M19.91,9.74a6.56,6.56 0,1 1,6.34 4.87"
+        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M42.86,28.91a7.6,7.6 0,1 1,-7.6 7.6,8 8,0 0,1 0.18,-1.64"
+        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M37.81,15a9,9 0,0 1,-0.33 -2.46,9.22 9.22,0 1,1 9.21,9.22"
+        android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M19.91,9.74m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M37.81,15m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M35.43,34.88m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,14.61m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,21.76m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
+    <path android:fillColor="#FFFFFFFF" android:pathData="M1.5,28.91m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"/>
 </vector>
