--- a/app/src/main/res/layout/air_quality_detail_layout.xml
+++ b/app/src/main/res/layout/air_quality_detail_layout.xml
@@ -1,33 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+    xmlns:tools="http://schemas.android.com/tools">
     <View
         android:id="@+id/aqi_detail_layout_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"
         android:background="@color/halfSnappedBlack"/>
-    <androidx.cardview.widget.CardView
-        android:visibility="invisible"
-        android:background="@color/pureWhite"
-        android:id="@+id/aqi_detail_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_16"
-        app:cardCornerRadius="@dimen/margin_4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:tools="http://schemas.android.com/tools"
+            android:visibility="invisible"
+            android:background="@drawable/round_cornered_box"
+            android:id="@+id/aqi_detail_layout"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/margin_16">
+            android:layout_margin="@dimen/margin_16"
+            android:paddingBottom="@dimen/margin_16"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/btn_close_aqi_detail"
@@ -300,5 +296,4 @@
                 app:layout_constraintTop_toBottomOf="@id/relative_layout_aqi"
                 tools:ignore="RtlHardcoded,RtlSymmetry" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
