--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -19,6 +19,7 @@
         android:id="@+id/icon_forecast"
         android:layout_width="@dimen/icon_90dp"
         android:layout_height="@dimen/icon_90dp"
+        android:padding="@dimen/margin_16"
         tools:ignore="ContentDescription"/>
     <TextView
         android:layout_gravity="center"
