--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -18,10 +18,11 @@
                     android:id="@+id/tv_temp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_24"
+                    android:layout_marginTop="@dimen/margin_16"
                     android:layout_marginStart="@dimen/margin_4"
                     app:fontFamily="@font/nunito"
                     android:textSize="@dimen/text_view_48sp"
+                    android:gravity="center"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/icon" />
 
@@ -32,15 +33,17 @@
                     android:layout_marginStart="@dimen/margin_4"
                     app:fontFamily="@font/nunito"
                     android:textSize="@dimen/text_view_20sp"
+                    android:gravity="center"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_temp" />
 
                 <ImageView
                     android:id="@+id/icon"
-                    android:layout_width="@dimen/big_icon_128dp"
-                    android:layout_height="@dimen/big_icon_128dp"
+                    android:layout_width="@dimen/icon_90dp"
+                    android:layout_height="@dimen/icon_90dp"
+                    android:padding="@dimen/margin_8"
+                    android:layout_marginTop="@dimen/margin_8"
                     android:contentDescription="@string/icon_content_description"
-                    android:translationX="@dimen/margin_20"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
