--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/widget_icon"
                 android:layout_width="@dimen/icon_90dp"
                 android:layout_gravity="end"
+                android:padding="@dimen/margin_16"
                 android:layout_marginEnd="@dimen/margin_n_16"
                 android:layout_height="@dimen/icon_90dp"
                 tools:ignore="ContentDescription"/>
